--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <p class="price">$149.99</p>
           <del>$169.99</del>
         </div>
-        <button>
+        <button type="button">
           <img src="images/icon-cart.svg" alt="icon" /> Add to Cart
         </button>
       </div>
